--- a/Substation Builder/Resources/XAML Pages/Transformer.xaml
+++ b/Substation Builder/Resources/XAML Pages/Transformer.xaml
@@ -3,7 +3,6 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Substation_Builder.Resources.XAML_Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Thevenin">
@@ -21,9 +20,37 @@
             </EventTrigger>
         </StackPanel.Triggers>
 
-        <Button Content="TEST"/>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            
+            <StackPanel Grid.Column="0">
+                <Label Height="35" Content="" HorizontalContentAlignment="Center" VerticalContentAlignment="Bottom" Opacity="0.9"/>
+                <Label Content="R1" HorizontalContentAlignment="Right" Margin="4,3,4,1" Opacity="0.9"/>
+                <Label Content="X1" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
+                <Label Content="R2" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
+                <Label Content="X2" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
+                <Label Content="R0" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
+                <Label Content="X0" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
+            </StackPanel>
 
-        <TextBlock Text="Transformer Page"/>
+            <StackPanel  Grid.Column="1">
+                <Label Height="35" Content="Impedance" HorizontalContentAlignment="Center" VerticalContentAlignment="Bottom" Opacity="0.9" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <TextBox Text="{Binding Thevenin.R1_PU, StringFormat=\{0:F5\}}" Margin="4,3,4,1" IsEnabled="{Binding ElementName=UseZ, Path=IsChecked}" Opacity="0.9" Background="{x:Null}"/>
+                <TextBox Text="{Binding Thevenin.X1_PU, StringFormat=\{0:F5\}}" Margin="4,1,4,2" IsEnabled="{Binding ElementName=UseZ, Path=IsChecked}" Opacity="0.9" Background="{x:Null}"/>
+                <TextBox Text="{Binding Thevenin.R2_PU, StringFormat=\{0:F5\}}" Margin="4,1" IsEnabled="{Binding ElementName=UseZ, Path=IsChecked}" Opacity="0.9" Background="{x:Null}"/>
+                <TextBox Text="{Binding Thevenin.X2_PU, StringFormat=\{0:F5\}}" Margin="4,1" IsEnabled="{Binding ElementName=UseZ, Path=IsChecked}" Opacity="0.9" Background="{x:Null}"/>
+                <TextBox Text="{Binding Thevenin.R0_PU, StringFormat=\{0:F5\}}" Margin="4,1" IsEnabled="{Binding ElementName=UseZ, Path=IsChecked}" Opacity="0.9" Background="{x:Null}"/>
+                <TextBox Text="{Binding Thevenin.X0_PU, StringFormat=\{0:F5\}}" Margin="4,1" IsEnabled="{Binding ElementName=UseZ, Path=IsChecked}" Opacity="0.9" Background="{x:Null}"/>
+                <RadioButton  GroupName="TheveninUnits" Name="UseZ" Grid.Column="1" Grid.Row="1" Content="%Z" IsChecked="True" Margin="10,5,0,0"/>
+                <RadioButton  GroupName="TheveninUnits" Name="UseOhm" Grid.Column="1" Grid.Row="1" Content="Ohms" IsChecked="True" Margin="10,5,0,0"/>
+            </StackPanel>
+        </Grid>
         
+
+
+
     </StackPanel>
 </Page>
