--- a/Substation Builder/App.xaml
+++ b/Substation Builder/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application x:Class="Substation_Builder.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Substation_Builder"
-             xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View\MainWindowView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
