--- a/Substation Builder/View/DefaultView.xaml
+++ b/Substation Builder/View/DefaultView.xaml
@@ -1,16 +1,14 @@
-﻿<Page x:Class="Substation_Builder.Resources.XAML_Pages.Relay"
+﻿<Page x:Class="Substation_Builder.View.DefaultView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Substation_Builder.Resources.XAML_Pages"
+      xmlns:local="clr-namespace:Substation_Builder.View"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Relay">
+      Title="Default">
 
     <Grid>
-        <Button Content="TEST RELAY">
-            
-        </Button>
+        
     </Grid>
 </Page>
