--- a/Substation Builder/View/MainWindowView.xaml
+++ b/Substation Builder/View/MainWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Name="metroWindow" x:Class="Substation_Builder.MainWindow"
+﻿<Controls:MetroWindow x:Name="metroWindow" x:Class="Substation_Builder.View.MainWindowView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:mah="http://metro.mahapps.com/winfx/xaml/shared"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                       mc:Ignorable="d"
-                      Icon="Resources\Images\MainPageIcon.jpg"    
+                      Icon="..\Resources\Images\MainPageIcon.jpg"    
                       Title="Substaion Builder" Height="350" Width="600" ResizeMode="CanResizeWithGrip"
                       WindowStartupLocation="CenterScreen"
                       BorderThickness="0" MinWidth="600" MinHeight="350" HorizontalAlignment="Center">
@@ -43,7 +43,7 @@
                     <Run FontSize="23" FontFamily="Segoe UI Light">About</Run>
                     <LineBreak/> Written to help lazy people be lazy.<LineBreak/>Not responsible for <Bold>ANY</Bold> mistakes.<LineBreak/>
                     <Hyperlink Click="Report_Bug">Report</Hyperlink> any bugs or issues found.
-                    <Image Margin="0,20,0,10" Name="AboutImage" Source="resources\Images\AboutImage.png" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" StretchDirection="UpOnly">
+                    <Image Margin="0,20,0,10" Name="AboutImage" Source="..\Resources\Images\AboutImage.png" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" StretchDirection="UpOnly">
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform ScaleY="1" ScaleX="-1"/>
@@ -90,8 +90,8 @@
 
             <StackPanel Grid.Row="1" Grid.Column="1">
 
-                <Controls:Tile x:Name="tile1" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" Click="One_Line">
-                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">One line</TextBlock>
+                <Controls:Tile x:Name="tile1" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" Click="DatabaseView">
+                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">Project Database</TextBlock>
                 </Controls:Tile>
                 <Controls:Tile x:Name="tile2" Margin="0,5,5,0" Height="Auto" Width="Auto" HorizontalContentAlignment="Left" Click="Fault_Analysis">
                     <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">Fault Analysis</TextBlock>
@@ -144,7 +144,7 @@
             </StackPanel>
         </Grid>
 
-        <Image Grid.Column="1" Margin="0,0,8,0" Name="MainPageBackground" Source="resources\Images\MainPageBackground.png" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Image Grid.Column="1" Margin="0,0,8,0" Name="MainPageBackground" Source="..\Resources\Images\MainPageBackground.png" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="1" ScaleX="-1"/>
@@ -154,7 +154,7 @@
                 </TransformGroup>
             </Image.RenderTransform>
             <Image.OpacityMask>
-                <ImageBrush ImageSource="Resources/Images/MainPageBackground.png"/>
+                <ImageBrush ImageSource="..\Resources/Images/MainPageBackground.png"/>
             </Image.OpacityMask>
         </Image>
 
