--- a/Substation Builder/View/RelayView.xaml
+++ b/Substation Builder/View/RelayView.xaml
@@ -1,14 +1,15 @@
-﻿<Page x:Class="Substation_Builder.Resources.XAML_Pages.Default"
+﻿<Page x:Class="Substation_Builder.View.RelayView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Substation_Builder.Resources.XAML_Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Default">
+      Title="Relay">
 
     <Grid>
-        
+        <Button Content="TEST RELAY">
+            
+        </Button>
     </Grid>
 </Page>
