--- a/Substation Builder/View/SubstationView.xaml
+++ b/Substation Builder/View/SubstationView.xaml
@@ -1,12 +1,14 @@
-﻿<Page x:Class="Substation_Builder.View.SubstationView"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="clr-namespace:Substation_Builder.View" x:Class="Substation_Builder.View.SubstationView"
       mc:Ignorable="d" 
-      Title="Substation">
-    
-    <StackPanel>
+      Title="Substation"
+      DataContext="{Binding DataContext, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:DatabaseView}}}">
+
+    <StackPanel DataContext="{Binding Project}">
 
         <Label Content="Substation Data" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16"/>
         <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
@@ -16,9 +18,6 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="150"/>
                 </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-
-                </Grid.RowDefinitions>
                 <StackPanel Grid.Column="0">
                     <Label Content="Substation Name:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9"/>
                     <Label Content="Substation Type:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9"/>
@@ -36,7 +35,6 @@
                         <ComboBoxItem Content="Double Bus"/>
                     </ComboBox>
                 </StackPanel>
-
             </Grid>
         </Border>
 
@@ -47,9 +45,6 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="60"/>
                 </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-
-                </Grid.RowDefinitions>
                 <StackPanel Grid.Column="0">
                     <Label Content="Base MVA:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
                     <Label Content="High Voltage:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
